tests/sources/invalid/arrays/array_errors.fire
// Array error tests - comprehensive

// Array size must be constant
fn non_constant_size() -> void {
    size: int32 = 5;
    arr: int32[size];  // Size must be a constant  //~ ERROR FS-PARSE-0010 @16
//~^ ERROR FS-PARSE-0010 @16
}

// Array index out of bounds (static checking)
fn static_bounds() -> void {
    arr: int32[5] = [1, 2, 3, 4, 5];
    val: int32 = arr[10];  // Out of bounds
}

// Wrong initializer size
fn wrong_init_size() -> void {
    arr: int32[5] = [1, 2, 3];  // Too few initializers
    arr2: int32[3] = [1, 2, 3, 4, 5];  // Too many initializers
}

// Array initializer type mismatch
fn init_type_mismatch() -> void {
    arr: int32[3] = [1, "two", 3];  // Mixed types
    arr2: int32[3] = ["one", "two", "three"];  // All wrong type  //~ ERROR FS-SEM-0002 @5
}

// Can't assign array to non-array
fn assign_to_non_array() -> void {
    x: int32 = [1, 2, 3];  // Can't assign array literal to scalar  //~ ERROR FS-SEM-0002 @5
}

// Can't assign arrays of different sizes
fn different_sizes() -> void {
    arr1: int32[3] = [1, 2, 3];
    arr2: int32[5] = [1, 2, 3, 4, 5];
    arr1 = arr2;  // Size mismatch
}

// Can't assign arrays of different types
fn different_types() -> void {
    arr1: int32[3] = [1, 2, 3];
    arr2: string[3] = ["a", "b", "c"];
    arr1 = arr2;  // Type mismatch  //~ ERROR FS-SEM-0002 @5
}

// Index must be integer
fn index_type() -> void {
    arr: int32[5] = [1, 2, 3, 4, 5];
    val: int32 = arr["two"];  // Index must be int  //~ ERROR FS-SEM-0010 @22
}

// Can't index non-array
fn index_non_array() -> void {
    x: int32 = 5;
    val: int32 = x[0];  // x is not an array  //~ ERROR FS-SEM-0010 @18
}
